API REST - Canviar nom del servei REST #217 API REST - Error 500 si s'envia consulta amb camps buits #218
