# digitalib-api-interna/src/main/java/es/caib/digitalib/api/interna/all/dadesobertes/estadistiques/Estadistiques.java
@@ -1,32 +1,0 @@
-package es.caib.digitalib.api.interna.all.dadesobertes.estadistiques;
-
-import java.util.List;
-
-
-/**
- * 
- * @author anadal (u80067)
- *
- */
-public class Estadistiques {
-
-    public Estadistiques(List<EstadistiquesTransaccio> resultat) {
-        super();
-        this.resultat = resultat;
-    }
-
-    public Estadistiques() {
-        super();
-    }
-
-    protected List<EstadistiquesTransaccio> resultat;
-
-    public List<EstadistiquesTransaccio> getResultat() {
-        return resultat;
-    }
-
-    public void setResultat(List<EstadistiquesTransaccio> resultat) {
-        this.resultat = resultat;
-    }
-
-}
